dataset1235/2025-2/2868285114/users/154215138/executions/2135592949_3788368433.log
== RUN (2025-08-14 20:23:52)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input()

# Impressao de saidas
print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Gandalf
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Donald Knuth
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Python
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Ada Lovelace
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 20:23:37)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input()

# Impressao de saidas
print({var})
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
{'Gandalf'}
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
{'Donald Knuth'}
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
{'Python'}
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
{'Ada Lovelace'}
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
{'Teste'}
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 20:13:01)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = Ewerton

# Impressao de saidas
print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = Ewerton
          ^^^^^^^
NameError: name 'Ewerton' is not defined
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = Ewerton
          ^^^^^^^
NameError: name 'Ewerton' is not defined
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = Ewerton
          ^^^^^^^
NameError: name 'Ewerton' is not defined
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = Ewerton
          ^^^^^^^
NameError: name 'Ewerton' is not defined
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = Ewerton
          ^^^^^^^
NameError: name 'Ewerton' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 20:23:01)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input()

# Impressao de saidas
print({var})
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
{'Gandalf'}
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
{'Donald Knuth'}
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
{'Python'}
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
{'Ada Lovelace'}
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
{'Teste'}
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 20:24:07)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input()

# Impressao de saidas
print(var)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Gandalf
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Donald Knuth
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Python
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Ada Lovelace
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 20:13:28)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = Texto

# Impressao de saidas
print(Texto)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = Texto
          ^^^^^
NameError: name 'Texto' is not defined. Did you mean: 'next'?
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = Texto
          ^^^^^
NameError: name 'Texto' is not defined. Did you mean: 'next'?
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = Texto
          ^^^^^
NameError: name 'Texto' is not defined. Did you mean: 'next'?
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = Texto
          ^^^^^
NameError: name 'Texto' is not defined. Did you mean: 'next'?
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = Texto
          ^^^^^
NameError: name 'Texto' is not defined. Did you mean: 'next'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 20:13:12)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = Ewerton

# Impressao de saidas
print("var")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = Ewerton
          ^^^^^^^
NameError: name 'Ewerton' is not defined
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = Ewerton
          ^^^^^^^
NameError: name 'Ewerton' is not defined
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = Ewerton
          ^^^^^^^
NameError: name 'Ewerton' is not defined
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = Ewerton
          ^^^^^^^
NameError: name 'Ewerton' is not defined
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = Ewerton
          ^^^^^^^
NameError: name 'Ewerton' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
